infer AM/PM from current time

--- a/index.html
+++ b/index.html
@@ -29,12 +29,11 @@
                             type="radio"
                             id="radio2"
                             name="radio"
-                            value="2"
+                            value="1"
                             checked
                         />
                         <label for="radio2"
-                            >Transition at a specific time (HH:MM - 24hr
-                            format):
+                            >Transition at a specific time (HH:MM):
                         </label>
                         <input type="text" id="end-time" name="end-time" />
                     </div>
@@ -44,7 +43,7 @@
                                 type="radio"
                                 id="radio1"
                                 name="radio"
-                                value="1"
+                                value="2"
                             />
                             <label for="radio1"
                                 >Transition after a specific number of minutes:
